--- a/app/package.json
+++ b/app/package.json
@@ -8,15 +8,19 @@
 		"@mui/icons-material": "^5.14.3",
 		"@mui/material": "^5.14.4",
 		"@pbe/react-yandex-maps": "^1.2.4",
+		"@reduxjs/toolkit": "^1.9.5",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"antd": "^5.8.5",
+		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-geocode": "^0.2.3",
+		"react-redux": "^8.1.2",
 		"react-router-dom": "^6.0.0",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.1",
 		"web-vitals": "^2.1.4",
 		"ymaps": "^0.2.1"
 	},
